--- a/Slovak/main/Settings.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Settings.apk/res/values-sk/strings.xml
@@ -7507,4 +7507,38 @@ Nastavenie telefónu môže vyžadovať prenos významného množstva dát."</st
     <string name="zone_auto_title">Časové pásmo podľa siete</string>
     <string name="zone_list_menu_sort_alphabetically">Zoradiť abecedne</string>
     <string name="zone_list_menu_sort_by_timezone">Zoradiť podľa časového pásma</string>
+    
+<string name="Sound_Settings">Zvukové efekty</string>
+    <string name="miheadset_Intelligentpickfree_summary">Keď je zapnuté potláčanie hluku, vaše slúchadlá sa po rozpoznaní hlasu na krátky čas automaticky prepnú do priehľadnosti</string>
+    <string name="miheadset_audio_quality">Kvalita zvuku</string>
+    <string name="miheadset_audio_quality_summary">Vyberte zvukový kodek Bluetooth</string>
+    <string name="miheadset_auto_answer_call">Prijímať hovory automaticky</string>
+    <string name="miheadset_bluetooth_audio_title">Vzorkovacia frekvencia zvuku LC%dplus Bluetooth</string>
+    <string name="miheadset_custom_sound">Vlastný zvuk</string>
+    <string name="miheadset_custom_sound_summary">Prispôsobenie zvuku pri používaní slúchadiel</string>
+    <string name="miheadset_double_connection">Duálne pripojenie</string>
+    <string name="miheadset_double_connection_summary">Keď zapnete túto funkciu, môžete prijímať hovory alebo prehrávať zvuk či video na oboch pripojených zariadeniach bez toho, aby ste museli manuálne prepínať</string>
+    <string name="miheadset_feedback">Spätná väzba</string>
+    <string name="miheadset_function_settings">Funkcie</string>
+    <string name="miheadset_gesture_operation">Gestá</string>
+    <string name="miheadset_head_tracking">Sledovať pohyb hlavy</string>
+    <string name="miheadset_head_tracking_summary">Zažite vylepšený zmysel pre priestor a smer podporovaného zvuku a videa</string>
+    <string name="miheadset_high_quality">Vysoká kvalita</string>
+    <string name="miheadset_low_latency">Nízka latencia</string>
+    <string name="miheadset_manual">O zariadení</string>
+    <string name="miheadset_notification_summary">Zobraziť miniaplikáciu panela upozornení, keď sú pripojené slúchadlá</string>
+    <string name="miheadset_notification_title">Zobraziť na paneli upozornení</string>
+    <string name="miheadset_preferences">Predvoľby</string>
+    <string name="miheadset_shared_contacts">Zdieľanie kontaktov</string>
+    <string name="miheadset_shared_contacts_summary">Na zdieľanie kontaktov</string>
+    <string name="miheadset_sound_settings">Zvuk</string>
+    <string name="miheadset_spatial_audio_off">Vypnuté</string>
+    <string name="miheadset_spatial_audio_on">Zapnuté</string>
+    <string name="miheadset_spatial_audio_summary">Zažite ponorenie a pocit priestoru pre podporovaný zvuk a video</string>
+    <string name="miheadset_support">Pomocník</string>
+    <string name="miheadset_virtual_surround">Virtuálny pohlcujúci zvuk</string>
+    <string name="miheadset_virtual_surround_summary">"Zvýšte hĺbku zvuku pre prehrávanie zvuku a videa v slúchadlách. Táto funkcia nebude fungovať, keď sa prehráva zvuk z kanála %1$d.%2$d."</string>
+    <string name="miheadset_voice_control_summary">Keď je táto funkcia zapnutá, môžete Mi AI povedať, aby navigovalo vaše zariadenie alebo ovládalo prehrávanie zvuku pomocou hlasových príkazov</string>
+    <string name="virtual_surround_sound_switch_summary">"Zvýšte hĺbku zvuku pre prehrávanie zvuku a videa v slúchadlách (táto funkcia nebude fungovať, keď sa prehráva zvuk %.1f)"</string>
+    <string name="virtual_surround_sound_switch_title">Virtuálny pohlcujúci zvuk</string>    
 </resources>
