--- a/Slovak/main/SoundRecorder.apk/res/values-sk/strings.xml
+++ b/Slovak/main/SoundRecorder.apk/res/values-sk/strings.xml
@@ -326,4 +326,11 @@ Pri použití mobilných dát sa budú účtovať poplatky od operátora."</stri
     <string name="wifi_recommended_title">Upozornenie na spotrebu dát</string>
     <string name="yesterday">Včera</string>
          <string name="recognition_notification_channel">Prepisovanie</string>
+         
+<string name="new_saf_permission_dialog_content">"Povolenia k nahrávaniu boli aktualizované. Povoľte Diktafónu prístup k nahrávkam hovorov.
+
+Ako udeliť povolenie
+Klepnite na \"%1$s\" a potom vyberte \"%2$s\"."</string>
+     <string name="new_saf_permission_dialog_grant_permission_immediately">Ďalej</string>
+     <string name="this_folder">Použiť tento priečinok</string>         
 </resources>
