--- a/Slovak/main/CloudService.apk/res/values-sk/strings.xml
+++ b/Slovak/main/CloudService.apk/res/values-sk/strings.xml
@@ -1111,4 +1111,21 @@ Prečítajte si a odsúhlaste naše Podmienky používania a Ochranu súkromia.
     <string name="xiaomi_cloud_service_subtitle">Všetky dôležité položky na jednom mieste</string>
     <string name="xmpp_server_addr" />
     <string name="yesterday">Včera</string>
+    
+<string name="permission_status_allow">Povolené</string>
+     <string name="permission_status_deny">Nepovolené</string>
+     <string name="permission_status_loading">Pristupuje sa k stavu zariadenia…</string>
+<string name="privacy_runtime_perm_calendar_desc">Na synchronizáciu udalostí kalendára</string>
+    <string name="privacy_runtime_perm_calendar_title">Prístup ku kalendáru</string>
+    <string name="privacy_runtime_perm_call_log_desc">Na synchronizáciu záznamov hovorov</string>
+    <string name="privacy_runtime_perm_call_log_title">Prístup k záznamom hovorov a ich úprava</string>
+    <string name="privacy_runtime_perm_contacts_desc">Na synchronizáciu kontaktov</string>
+    <string name="privacy_runtime_perm_contacts_title">Prístup ku kontaktom a ich úprava</string>
+    <string name="privacy_runtime_perm_external_storage_desc">Na synchronizáciu profilových fotografií kontaktu a príloh správ</string>
+    <string name="privacy_runtime_perm_external_storage_title">Prístup k úložisku</string>
+    <string name="privacy_runtime_perm_phone_state_desc">Pre prístup k telefónnemu číslu a stavu zariadenia</string>
+    <string name="privacy_runtime_perm_phone_state_title">Prístup k informáciám o zariadení</string>
+    <string name="privacy_runtime_perm_sms_desc">Na synchronizáciu správ</string>
+    <string name="privacy_runtime_perm_sms_title">Prístup k správam</string>
+            
 </resources>
