--- a/Slovak/main/DownloadProviderUi.apk/res/values-sk/strings.xml
+++ b/Slovak/main/DownloadProviderUi.apk/res/values-sk/strings.xml
@@ -395,4 +395,8 @@ Táto funkcia nie je mimo Čínu odporúčaná"</string>
     <string name="xunlei_switch">Xunlei sťahovanie</string>
     <string name="yesterday">Včera</string>
          <string name="menu_title_fileexplore">Správca súborov</string>
+<string name="category">Kategória</string>
+     <string name="downloadCount">Stiahnuté súbory</string>
+     <string name="nowInstall">Inštalovať</string>
+     <string name="size">Veľkosť</string>         
 </resources>
