--- a/Slovak/main/SecurityCenter.apk/res/values-sk/strings.xml
+++ b/Slovak/main/SecurityCenter.apk/res/values-sk/strings.xml
@@ -5436,5 +5436,5 @@ Skúste zväčšiť rozlíšenie!"</string>
 pri znížení obnovovacej frekvencie a teplotných limitov“</string>
      <string name="gd_sidebar_long_press_tips">Stlačením a podržaním indikátora ho posuniete, zatiaľ čo zariadenie držíte vertikálne</string>
      <string name="gtb_guide_game_mode_tips">Vyberte preferovaný herný režim</string>
-     <string name="gtb_guide_gtb_line_xspace">Zlepšite svoju hru s úplne novou hrou Game Turbo!</string>        
+     <string name="gtb_guide_gtb_line_xspace">Zlepšite svoju hru s úplne novým Game Turbo!</string>        
 </resources>
