--- a/Slovak/main/MiLinkService.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiLinkService.apk/res/values-sk/strings.xml
@@ -334,4 +334,9 @@ Pred použitím tejto funkcie si prečítajte a vyjadrite súhlas s našimi zmlu
     <string name="wednesday_short">Str</string>
     <string name="wednesday_shortest">S</string>
     <string name="yesterday">Včera</string>
+    
+<string name="invisible_mode_dialog_content">Vysielanie nie je možné použiť, keď ste v režime inkognito. Najskôr vypnite režim inkognito.</string>
+     <string name="invisible_mode_dialog_content_audio_relay">Vysielanie nie je možné preniesť, keď ste v režime inkognito. Najskôr vypnite režim inkognito.</string>
+     <string name="invisible_mode_dialog_pos">Vypnúť</string>
+     <string name="invisible_mode_dialog_title">Ste inkognito</string>    
 </resources>
