--- a/Slovak/main/MiSettings.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiSettings.apk/res/values-sk/strings.xml
@@ -19,9 +19,9 @@
     <string name="anti_flicker_title">Anti-flicker režim</string>
     <string name="app_name">Čas displeja</string>
     <string name="application_sound">Upozornenia aplikácií</string>
-    <string name="apply_ringtone">Použíť</string>
+    <string name="apply_ringtone">Použiť</string>
     <string name="arctic_fox">Arktická líška</string>
-    <string name="arctic_introduction">Jedinečná krajina obývaná nádhernými stvoreniami, ktoré sa nebojí prudkého chladu.</string>
+    <string name="arctic_introduction">Jedinečná krajina obývaná nádhernými stvoreniami, ktoré sa neboja prudkého chladu.</string>
     <string name="arctic_wolf">Arktický vlk</string>
     <string name="area_africa">Savana</string>
     <string name="area_amazon">Dažďový prales</string>
@@ -54,7 +54,7 @@
     <string name="click_to_save">Stlačte \"Hotovo\" pre nastavenie bežného zvonenia.</string>
     <string name="close">Zatvoriť</string>
     <string name="color_gamut">Tón farby</string>
-    <string name="common_brushtail">Brushtail possum</string>
+    <string name="common_brushtail">Kusu líščí</string>
     <string name="common_ostrich">Pštros</string>
     <string name="contact_description">Dotykom na odkaz kontaktu uskutočníte hovor</string>
     <string name="contact_title">Odkaz kontaktu</string>
@@ -142,8 +142,8 @@ nie sú generované v Druhom profile"</string>
     <string name="kinkajou">Kinkajou</string>
     <string name="kinkajou_info">Kinkajou je známy pre svoje nočné návyky a silný chvost.</string>
     <string name="koala">Koala</string>
-    <string name="laughing_kookaburra">Kookaburra</string>
-    <string name="laughing_kookaburra_info">Kookaburry sú známe svojimi jedinečnými zvukmi a sú dobrí pri love hadov a iných plazov.</string>
+    <string name="laughing_kookaburra">Kukabura</string>
+    <string name="laughing_kookaburra_info">Kukabury sú známe svojimi jedinečnými zvukmi a sú dobrí pri love hadov a iných plazov.</string>
     <string name="leopard">Leopard</string>
     <string name="lion">Lev</string>
     <string name="lion_info">Levy sú prudké a silné predátory. Žijú v skupinách a majú silný územný zmysel.</string>
@@ -171,7 +171,7 @@ nie sú generované v Druhom profile"</string>
     <string name="more_ringtones">Viac zvonení</string>
     <string name="more_settings">Nastavenia</string>
     <string name="most_unlock_week_day">"Väčšina odomknutí: "</string>
-    <string name="mus_ox">Muskox</string>
+    <string name="mus_ox">Pižmoň severský</string>
     <string name="narwhal">Narval</string>
     <string name="narwhal_info">Narvalové majú veľký kel a živia sa bentickou korisťou, väčšinou pleskáčmi.</string>
     <string name="native_hen_info">Tasmánske pôvodné sliepky žijú blízko vody a nedokážu lietať.</string>
@@ -185,7 +185,7 @@ nie sú generované v Druhom profile"</string>
     <string name="normal_mode_summary">Neobmedzovať blikanie pri nízkom osvetlení</string>
     <string name="normal_mode_summary_new">Povoliť blikanie pri slabom osvetlení</string>
     <string name="north_white_rhinoceros">Biely nosorožec</string>
-    <string name="norway_lemmings">Lumíci</string>
+    <string name="norway_lemmings">Lumík</string>
     <string name="notification_sound">Zvuky upozornení</string>
     <string name="ocelot">Ocelot</string>
     <string name="olive_baboon">Olivový pavián</string>
@@ -195,11 +195,11 @@ nie sú generované v Druhom profile"</string>
     <string name="p3_color_region_summary">Zobraziť celý obsah displeja v P3 farebnom tóne</string>
     <string name="parasitic_jaeger">Parazitický jaeger</string>
     <string name="personality_hint_ringtone">Personalizované zvuky</string>
-    <string name="petaurus_breviceps">Sugar glider</string>
+    <string name="petaurus_breviceps">Vakoveverica krátkohlavá</string>
     <string name="pied_crow">Vrana</string>
     <string name="plains_zebra">Zebra</string>
-    <string name="platpus_info">Vtakopysk je dôležitým predmetom v štúdiu evolučnej biológie. Je to tiež jeden z mála druhov jedovatých cicavcov.</string>
-    <string name="platypus">Vtakopysk</string>
+    <string name="platpus_info">Vtákopysk je dôležitým predmetom v štúdiu evolučnej biológie. Je to tiež jeden z mála druhov jedovatých cicavcov.</string>
+    <string name="platypus">Vtákopysk</string>
     <string name="polar_bear">Ľadový medveď</string>
     <string name="pomarine_jaeger">Pomarínsky jaeger</string>
     <string name="preview">Náhľad</string>
@@ -213,12 +213,12 @@ nie sú generované v Druhom profile"</string>
     <string name="restore_default">Obnoviť predvolené</string>
     <string name="retry">Znova</string>
     <string name="rgb_space_color">RGB farba</string>
-    <string name="rhinoceros_info">Biely nosorožec je mocný bylinožravec s jemným temperamentom. Dnes je to dosť zriedkavé, je na pokraji vyhynutia.</string>
+    <string name="rhinoceros_info">Nosorožec je mocný bylinožravec s jemným temperamentom. Dnes je to dosť zriedkavé, je na pokraji vyhynutia.</string>
     <string name="ringtone_slot_setting_title">Duálne SIM zvonenie</string>
     <string name="ringtone_sound">Zvonenia</string>
     <string name="ringtone_title">Zvonenia</string>
     <string name="sacred_ibis">Ibis posvätný</string>
-    <string name="sanderling">Sanderling</string>
+    <string name="sanderling">Pobrežník belavý</string>
     <string name="scarlet_macaw">Papagáj</string>
     <string name="scarlet_macaw_info">Papagáje z nového sveta s dlhými chvostami, ktoré sú často farebné.</string>
     <string name="screen_cancel">Zrušiť</string>
@@ -556,11 +556,11 @@ Pre správne fungovanie, táto aplikácia vyžaduje pripojenie na internet a nas
     <string name="weddell_seal">Tuleň</string>
     <string name="whipbird_eastern_whipbird">Bičík východný</string>
     <string name="white_bellied_sea_eagle">Orol bielochvostý</string>
-    <string name="willow_grouse">Willow ptarmigan</string>
-    <string name="wombat">Wombat</string>
+    <string name="willow_grouse">Snehuľa kapcavá</string>
+    <string name="wombat">Vombat</string>
     
 <string name="amazon_orange_winged_info">Amazonka oranžová je veľký, hlučný papagáj, ktorý vydáva hlasné, vysoké výkriky.</string>
-     <string name="asian_badger">ázijský jazvec</string>
+     <string name="asian_badger">Ázijský jazvec</string>
      <string name="asian_black_bear">Ázijský čierny medveď</string>
      <string name="australian_magpie">Austrálska straka</string>
      <string name="black_head_bulbul_info">Tieto vtáky sa často pohybujú v skupinách a lietajú na krátke vzdialenosti.</string>
@@ -582,18 +582,18 @@ Pre správne fungovanie, táto aplikácia vyžaduje pripojenie na internet a nas
      <string name="fps_user_tip_footer">"%1$d. Aby ste pochopili rozdiel medzi vyššou a nižšou obnovovacou frekvenciou, ukážky sa tu prehrávajú pomalšie. Pri bežnom používaní môže byť pre vás ťažšie zaznamenať rozdiel.
 %2$d. V niektorých prípadoch môže byť obnovovacia frekvencia upravená dynamicky podľa toho, aké položky sú zobrazené."</string>
      <string name="galapagos_cormorant">Nelietavý kormorán</string>
-     <string name="galapagos_dove">galapágska holubica</string>
-     <string name="galapagos_hawk">galapágsky jastrab</string>
-     <string name="galapagos_mockingbird">Galapagos mockingbird</string>
+     <string name="galapagos_dove">Galapágska holubica</string>
+     <string name="galapagos_hawk">Galapágsky jastrab</string>
+     <string name="galapagos_mockingbird">Spevák galapágsky</string>
      <string name="galapagos_penguin">Tučniak z Galapág</string>
      <string name="geospiza_conirostris">Española kaktusová pinka</string>
      <string name="giant_panda">Panda veľká</string>
      <string name="golden_eagle">Zlatý orol</string>
      <string name="golden_rumped_tinkerbird">Vtáčik so žltým hrbolčekom</string>
-     <string name="great_frigatebird">Veľká fregata</string>
+     <string name="great_frigatebird">Fregata veľká</string>
      <string name="green_peafowl">Páv zelený</string>
      <string name="green_warbler_finch">Penica zelená</string>
-<string name="grey_headed_flying_fox">Liška šedohlavá</string>
+<string name="grey_headed_flying_fox">Líška šedohlavá</string>
      <string name="high_fps_description">Vysoká obnovovacia frekvencia obrazovky. Vyššia spotreba energie.</string>
      <string name="high_fps_tip_footer">Použitím vyšších obnovovacích frekvencií je zážitok zo sledovania plynulejší, ale spotrebúva viac energie.</string>
      <string name="intelligent_radio_btn_summary">Upravte obnovovaciu frekvenciu dynamicky na základe scenárov, aby ste dosiahli rovnováhu medzi výkonom a spotrebou energie</string>
@@ -604,19 +604,19 @@ Pre správne fungovanie, táto aplikácia vyžaduje pripojenie na internet a nas
      <string name="low_flicker_mode_summary">Zabráňte blikaniu pri slabom osvetlení, aby ste znížili únavu očí</string>
      <string name="low_fps_description">Nízka obnovovacia frekvencia obrazovky. Nižšia spotreba energie.</string>
      <string name="lynx">Rys</string>
-     <string name="magnificent_frigatebird">Veľkolepá frigatebird</string>
+     <string name="magnificent_frigatebird">Fregata veľkolepá</string>
      <string name="marabou_stork_info">Bocian marabu je mohutný vták, častý mrchožrút.</string>
      <string name="masked_palm_civet">Cibetka s maskovanou palmou</string>
      <string name="medium_tree_finch">Stredná plutva stromová</string>
      <string name="mix_match_type_galapagos_islands">Galapágy</string>
      <string name="mix_match_type_southwest_mountain">Juhozápad Číny</string>
      <string name="nazca_booby">Nazca hlupák</string>
-     <string name="norway_lemmings_info">Lemming nórsky žije v tundre a kopcoch a uprednostňuje život pri vode.</string>
+     <string name="norway_lemmings_info">Lumík nórsky žije v tundre a kopcoch a uprednostňuje život pri vode.</string>
      <string name="not_set">Nenastavené</string>
      <string name="ostrich_info">Pštrosy sú veľké nelietavé vtáky Afriky, ktoré kladú najväčšie vajcia zo všetkých živých suchozemských zvierat.</string>
      <string name="pallas_s_cat">"Pallasova mačka"</string>
      <string name="phoebastria_irrorata">Albatros vlnitý</string>
-     <string name="pied_butcherbird">Pied Butcherbird</string>
+     <string name="pied_butcherbird">Vrieskavec čiernohlavý</string>
      <string name="preference_copied">\"%1$s\" bolo skopírované do schránky.</string>
      <string name="primary_color_region_chinese_only">príroda</string>
      <string name="red_billed_tropicbird">Obratník červenozobý</string>
@@ -626,7 +626,7 @@ Pre správne fungovanie, táto aplikácia vyžaduje pripojenie na internet a nas
      <string name="service_ringtone_title">Tón zvonenia služby</string>
      <string name="short_eared_owl">Krátko ušatá</string>
      <string name="silver_pheasant">Strieborný bažant</string>
-     <string name="skywalker_hoolock_gibbon">Skywalker hoolock gibbon</string>
+     <string name="skywalker_hoolock_gibbon">Gibon</string>
      <string name="small_ground_finch">Plutva malá</string>
      <string name="snow_leopard">Leopard snežný</string>
 <string name="split_page_authorization">Vitajte v aplikácii Čas pred obrazovkou! Tu môžete nastaviť limity času na obrazovke a zobraziť štatistiky. Klepnutím na \"Štart\" túto funkciu zapnete.</string>
@@ -641,15 +641,13 @@ Pre správne fungovanie, táto aplikácia vyžaduje pripojenie na internet a nas
      <string name="usage_new_home_avg_usage_day">Priem. %s denne</string>
      <string name="usage_new_home_sys_no_limit_summary">"Nie je možné obmedziť čas používania systémových aplikácií"</string>
      <string name="usage_new_home_usage_detail">Podrobnosti o použití</string>
-     <string name="usage_remain_about_hour_miunte">≈%1$s %2$s</string>
-     <string name="usage_remain_hour_miunte">%1$s %2$s</string>
-     <string name="usage_state_percent">%s%%</string>
      <string name="vampire_finch">Upírka zemná</string>
      <string name="whipbird_info">Bihovce východné pochádzajú z východného pobrežia Austrálie.</string>
      <string name="wild_boar">Diviak</string>
-     <string name="willow_grouse_info">Ptarmigán vŕbový je väčšinu svojho života bylinožravý a obýva predovšetkým subalpínske a subarktické biotopy.</string>
+     <string name="willow_grouse_info">Snehuľa kapcavá je väčšinu svojho života bylinožravý a obýva predovšetkým subalpínske a subarktické biotopy.</string>
      <string name="wolf">Vlk</string>
-     <string name="yellow_necked_spurfowl">Spurfowl žltokrký</string>
-     <string name="yellow_throated_marten">kuna žltohrdlá</string>
-     <string name="yunnan_snub_nosed_monkey">Čierna opica s tuponosým nosom</string>              
+     <string name="yellow_necked_spurfowl">Frankolínec žltokrký</string>
+     <string name="yellow_throated_marten">Kuna žltohrdlá</string>
+     <string name="yunnan_snub_nosed_monkey">Čierna opica s tuponosým nosom</string>    
+          <string name="brown_pelican">Pelikán hnedý</string>          
 </resources>
