--- a/Slovak/main/PowerKeeper.apk/res/values-sk/strings.xml
+++ b/Slovak/main/PowerKeeper.apk/res/values-sk/strings.xml
@@ -375,4 +375,9 @@
     <string name="wednesday_short">Str</string>
     <string name="wednesday_shortest">S</string>
     <string name="yesterday">Včera</string>
+	
+	<string name="clear_temperature">Konečná teplota</string>
+	<string name="screen_off_current">Displej vypnutý DC</string>
+	<string name="screen_on_current">Displej zapnutý DC</string>
+    <string name="trig_temperature">Začiatočná teplota</string>			
 </resources>
