--- a/Slovak/main/Settings.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Settings.apk/res/values-sk/strings.xml
@@ -7511,9 +7511,9 @@ Nastavenie telefónu môže vyžadovať prenos významného množstva dát."</st
 <string name="Sound_Settings">Zvukové efekty</string>
     <string name="miheadset_Intelligentpickfree_summary">Keď je zapnuté potláčanie hluku, vaše slúchadlá sa po rozpoznaní hlasu na krátky čas automaticky prepnú do priehľadnosti</string>
     <string name="miheadset_audio_quality">Kvalita zvuku</string>
-    <string name="miheadset_audio_quality_summary">Vyberte zvukový kodek Bluetooth</string>
+    <string name="miheadset_audio_quality_summary">Vyberte zvukový kódek Bluetooth</string>
     <string name="miheadset_auto_answer_call">Prijímať hovory automaticky</string>
-    <string name="miheadset_bluetooth_audio_title">Vzorkovacia frekvencia zvuku LC%dplus Bluetooth</string>
+    <string name="miheadset_bluetooth_audio_title">Vzorkovacia frekvencia zvuku LC3plus Bluetooth</string>
     <string name="miheadset_custom_sound">Vlastný zvuk</string>
     <string name="miheadset_custom_sound_summary">Prispôsobenie zvuku pri používaní slúchadiel</string>
     <string name="miheadset_double_connection">Duálne pripojenie</string>
@@ -7537,7 +7537,7 @@ Nastavenie telefónu môže vyžadovať prenos významného množstva dát."</st
     <string name="miheadset_spatial_audio_summary">Zažite ponorenie a pocit priestoru pre podporovaný zvuk a video</string>
     <string name="miheadset_support">Pomocník</string>
     <string name="miheadset_virtual_surround">Virtuálny pohlcujúci zvuk</string>
-    <string name="miheadset_virtual_surround_summary">"Zvýšte hĺbku zvuku pre prehrávanie zvuku a videa v slúchadlách. Táto funkcia nebude fungovať, keď sa prehráva zvuk z kanála %1$d.%2$d."</string>
+    <string name="miheadset_virtual_surround_summary">"Zvýšte hĺbku zvuku pre prehrávanie zvuku a videa v slúchadlách. Táto funkcia nebude fungovať, keď sa prehráva zvuk z kanála %s."</string>
     <string name="miheadset_voice_control_summary">Keď je táto funkcia zapnutá, môžete Mi AI povedať, aby navigovalo vaše zariadenie alebo ovládalo prehrávanie zvuku pomocou hlasových príkazov</string>
     <string name="virtual_surround_sound_switch_summary">"Zvýšte hĺbku zvuku pre prehrávanie zvuku a videa v slúchadlách (táto funkcia nebude fungovať, keď sa prehráva zvuk %.1f)"</string>
     <string name="virtual_surround_sound_switch_title">Virtuálny pohlcujúci zvuk</string>    
